Resolves #128 Fixed a layout issue with Angular Material select components

--- a/styles/material/select-field.styl
+++ b/styles/material/select-field.styl
@@ -2,4 +2,10 @@ select-field {
   md-select {
     padding: 0;
   }
+
+  md-input-container {
+    label {
+      display: none;
+    }
+  }
 }
